<resources>
    <string name="app_name">Joulare</string>
    <string name="titleMenu">JOULARE</string>
    <string name="sousTitreMenu">Main menu</string>
    <string name="unJoueurMenu">Play</string>
    <string name="multiMenu">Multiplayer</string>
    <string name="optionMenu">Options</string>
    <string name="classementMenu">Ranking</string>
    <string name="exitMenu">Exit</string>
    <string name="resume">Resume</string>

    <string name="nameMenu">Choose a name</string>
    <string name="yourName">Your name</string>
    <string name="playName">Let\'s go !</string>
    <string name="ff">Forfeit</string>

    <string name="sousTitreParam">Options</string>
    <string name="sonOption">Sound options</string>
    <string name="langueOption">Languages</string>
    <string name="exitRetour">Back</string>

    <string name="langFr">French</string>
    <string name="langEng">English</string>
    <string name="langEsp">Spanish</string>
    <string name="sameLang">You are already in english</string>

    <string name="lengthName">13 character limit</string>
    <string name="emptyName">Please choose a name</string>

    <string name="defeat">DEFEAT</string>
    <string name="fail">You failed miserably …</string>
    <string name="warning">Warning !</string>
    <string name="quit">Do you really want to quit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="flagIcone">🚩</string>

    <string name="victory">VICTORY</string>
    <string name="congrats">Congratulations, </string>
    <string name="smart">You are really very smart !</string>
    <string name="heimer">Heimerdinger</string>

</resources>