<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".LangActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/many_years_higher"
        android:text="@string/titleMenu"
        android:textAlignment="center"
        android:textColor="#D47BE3"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/pixelbit"
        android:text="@string/langueOption"
        android:textAlignment="center"
        android:textColor="#3EDD1A"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/pixeled"
        android:text="@string/langEng"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <Button
        android:id="@+id/fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/pixeled"
        android:text="@string/langFr"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <Button
        android:id="@+id/es"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:fontFamily="@font/pixeled"
        android:text="@string/langEsp"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <Button
        android:id="@+id/retourOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:fontFamily="@font/pixeled"
        android:onClick="retourClic"
        android:text="@string/exitRetour"
        app:layout_constraintEnd_toEndOf="@+id/menu"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/menu" />


</androidx.constraintlayout.widget.ConstraintLayout>